// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`observable_utils injectObservablesAsProps() 1`] = `
<TestComponent
  testProp="initial text"
/>
`;

exports[`observable_utils injectObservablesAsProps() 2`] = `
<TestComponent
  testProp="updated text"
/>
`;
